# rustfeed

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  Makefile  QUICKSTART.md  README.md  config.toml.example  docker-compose.yml
.claude/: SKILLS.md  settings.json
.claude/rules/: 01-ai-instructions.md  02-code-style.md  03-workflow.md  04-architecture.md
.github/workflows/: docs.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
apps/rustfeed-gui/: index.html  package-lock.json  package.json  vite.config.ts
apps/rustfeed-gui/src/: App.tsx  index.css
apps/rustfeed-gui/src/components/feed/: AddFeedModal.tsx  FeedItem.tsx  FeedList.tsx
apps/rustfeed-gui/src/components/ui/: Button.tsx  Modal.tsx
apps/rustfeed-gui/src/hooks/: useFeeds.ts
apps/rustfeed-gui/src/types/: index.ts
crates/rustfeed-cli/: Cargo.toml
crates/rustfeed-cli/src/: commands.rs  main.rs
crates/rustfeed-core/: Cargo.toml
crates/rustfeed-core/src/: config.rs  db.rs  feed.rs  lib.rs  models.rs
crates/rustfeed-tauri/: Cargo.toml  tauri.conf.json
crates/rustfeed-tauri/capabilities/: default.json
crates/rustfeed-tauri/src/: lib.rs  main.rs
crates/rustfeed-tui/: Cargo.toml
crates/rustfeed-tui/src/: app.rs  event.rs  main.rs
crates/rustfeed-tui/src/ui/: mod.rs
docs/learning/: 01-ownership-borrowing.md  02-error-handling.md  03-traits-generics.md  04-async-await.md  05-modules-crates.md  06-pattern-matching.md  07-memory-safety.md  README.md
docs/learning-tauri/: 01-architecture.md  02-commands.md  03-state-management.md  04-events.md  05-security.md  06-build-deploy.md  README.md
scripts/: README.md  test-docker-env.sh  validate-docker.py
src/: config.rs  main.rs
src/commands/: mod.rs
src/db/: mod.rs
src/feed/: mod.rs
src/models/: mod.rs
