[workspace]
resolver = "2"
members = [
    "crates/rustfeed-core",
    "crates/rustfeed-cli",
    "crates/rustfeed-tui",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["ereferen"]
repository = "https://github.com/ereferen/rustfeed"
license = "MIT"

[workspace.dependencies]
# 共有依存関係
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
feed-rs = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
config = "0.14"
toml = "0.8"

# CLI用
clap = { version = "4", features = ["derive"] }
colored = "2"

# TUI用
ratatui = "0.29"
crossterm = "0.28"
open = "5"
html2text = "0.12"

# テスト用
tokio-test = "0.4"

# 内部クレート
rustfeed-core = { path = "crates/rustfeed-core" }
