[package]
name = "rustfeed-core"
description = "Core library for rustfeed - RSS feed reader"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
feed-rs = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
